<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/brown"
    android:paddingLeft="5dp"
    android:paddingRight="5dp"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".SurveyActivity">
    <TextView
        android:id="@+id/textViewPersonaje"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_personaje_favorito"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/yellow"
        android:textStyle="bold"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    <Spinner
        android:id="@+id/spinnerPersonajeSelect"
        android:layout_width="372dp"
        android:layout_height="wrap_content"
        android:entries="@array/personaje_spinner"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>
    <TextView
        android:id="@+id/textViewPersonajeRango"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_personaje_rango"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/yellow"
        android:textStyle="bold"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    <SeekBar
        android:id="@+id/seekBarPersonajeRango"
        style="@style/Widget.AppCompat.SeekBar"
        android:layout_width="340dp"
        android:layout_height="32dp"
        android:min="1"
        android:max="11"
        android:progressTint="@color/blue"
        android:maxHeight="3dp"
        android:progress="4"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>
    <TextView
        android:id="@+id/textViewPersonajeDOB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lbl_personaje_dob"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/yellow"
        android:textStyle="bold"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButtonCalendar"
            android:layout_width="54dp"
            android:layout_height="50dp"
            android:layout_marginStart="24dp"
            android:background="@color/colorPrimary"
            android:elevation="10dp"
            android:onClick="showDatePickerDialog"
            android:tooltipText="@string/lbl_personaje_btn_image"
            app:srcCompat="@android:drawable/ic_menu_my_calendar"/>
        <TextView
            android:id="@+id/textViewPersonajeDOBYears"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="25dp"
            android:layout_marginTop="9dp"
            android:text="99"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@color/yellow"
            android:textStyle="bold" />
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp"/>
    <TextView
        android:id="@+id/textViewGender"
        android:layout_width="349dp"
        android:layout_height="32dp"
        android:text="@string/lbl_personaje_gender"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:textColor="@color/yellow"
        android:textStyle="bold" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp"/>
    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="343dp"
        android:layout_height="88dp"

    android:orientation="vertical">
    <RadioButton
        android:id="@+id/rdb_Male"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:checked="true"
        android:text="@string/lbl_personaje_gender_male"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/blue"
        android:textStyle="bold" />
    <RadioButton
        android:id="@+id/rdb_Female"
        android:layout_width="150dp"
        android:layout_height="18dp"
        android:layout_weight="1"
        android:text="@string/lbl_personaje_gender_female"
        android:textAppearance="@android:style/TextAppearance.Medium"
        android:textColor="@color/blue"
        android:textStyle="bold"/>
</RadioGroup>
<Space
android:layout_width="match_parent"
android:layout_height="25dp"/>
<Button
android:id="@+id/buttonSendSurvey"
android:layout_width="393dp"
android:layout_height="wrap_content"
android:background="@color/MidnightBlue"
android:onClick="sendSurveyData"
android:text="@string/lbl_personaje_btn_survey"
android:textAppearance="@android:style/TextAppearance.Large"
android:textColor="@color/white"
android:textStyle="bold" />
    </LinearLayout>